Change link color in biography page from white to black to fix accessibility issue of insufficient color contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ aside button {
     background-color: #f60;
     border: none;
     border-radius: 10px;
-    color: #fff;
+    color: #000;
     cursor: pointer;
     font-size: 1.5em;
     padding: 10px;
@@ -205,6 +205,7 @@ aside button {
 
 aside button:hover {
     background-color: #fff;
+    border: 1px solid #f60;
     color: #000;
     text-decoration: underline 4px #363;
 }
